syntax = "proto3";

package dashboard.v1;

option go_package = "github.com/castlemilk/shorted.com.au/services/gen/proto/go/dashboard/v1;dashboardv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// DashboardService provides CRUD operations for user dashboards
service DashboardService {
  // CreateDashboard creates a new dashboard for the authenticated user
  rpc CreateDashboard(CreateDashboardRequest) returns (CreateDashboardResponse) {
    option (google.api.http) = {
      post: "/v1/dashboards"
      body: "*"
    };
  }

  // GetDashboard retrieves a specific dashboard by ID
  rpc GetDashboard(GetDashboardRequest) returns (GetDashboardResponse) {
    option (google.api.http) = {
      get: "/v1/dashboards/{dashboard_id}"
    };
  }

  // ListDashboards returns all dashboards for the authenticated user
  rpc ListDashboards(ListDashboardsRequest) returns (ListDashboardsResponse) {
    option (google.api.http) = {
      get: "/v1/dashboards"
    };
  }

  // UpdateDashboard updates an existing dashboard
  rpc UpdateDashboard(UpdateDashboardRequest) returns (UpdateDashboardResponse) {
    option (google.api.http) = {
      put: "/v1/dashboards/{dashboard_id}"
      body: "*"
    };
  }

  // DeleteDashboard removes a dashboard
  rpc DeleteDashboard(DeleteDashboardRequest) returns (DeleteDashboardResponse) {
    option (google.api.http) = {
      delete: "/v1/dashboards/{dashboard_id}"
    };
  }

  // SetDefaultDashboard sets a dashboard as the user's default
  rpc SetDefaultDashboard(SetDefaultDashboardRequest) returns (SetDefaultDashboardResponse) {
    option (google.api.http) = {
      post: "/v1/dashboards/{dashboard_id}/set-default"
    };
  }
}

// Dashboard represents a user's dashboard configuration
message Dashboard {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  repeated Widget widgets = 5;
  bool is_default = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Widget represents a dashboard widget configuration
message Widget {
  string id = 1;
  WidgetType type = 2;
  string title = 3;
  WidgetLayout layout = 4;
  google.protobuf.Struct settings = 5;
  DataSource data_source = 6;
}

// WidgetType enumerates available widget types
enum WidgetType {
  WIDGET_TYPE_UNSPECIFIED = 0;
  WIDGET_TYPE_TOP_SHORTS = 1;
  WIDGET_TYPE_INDUSTRY_TREEMAP = 2;
  WIDGET_TYPE_STOCK_CHART = 3;
  WIDGET_TYPE_WATCHLIST = 4;
  WIDGET_TYPE_PORTFOLIO = 5;
  WIDGET_TYPE_NEWS_FEED = 6;
  WIDGET_TYPE_MARKET_OVERVIEW = 7;
}

// WidgetLayout defines the position and size of a widget
message WidgetLayout {
  int32 x = 1;
  int32 y = 2;
  int32 w = 3;
  int32 h = 4;
  int32 min_w = 5;
  int32 min_h = 6;
}

// DataSource configuration for a widget
message DataSource {
  string endpoint = 1;
  int32 refresh_interval = 2; // in seconds
}

// Request/Response messages

message CreateDashboardRequest {
  string name = 1;
  string description = 2;
  repeated Widget widgets = 3;
  bool is_default = 4;
}

message CreateDashboardResponse {
  Dashboard dashboard = 1;
}

message GetDashboardRequest {
  string dashboard_id = 1;
}

message GetDashboardResponse {
  Dashboard dashboard = 1;
}

message ListDashboardsRequest {
  // Optional pagination
  int32 page_size = 1;
  string page_token = 2;
}

message ListDashboardsResponse {
  repeated Dashboard dashboards = 1;
  string next_page_token = 2;
}

message UpdateDashboardRequest {
  string dashboard_id = 1;
  string name = 2;
  string description = 3;
  repeated Widget widgets = 4;
}

message UpdateDashboardResponse {
  Dashboard dashboard = 1;
}

message DeleteDashboardRequest {
  string dashboard_id = 1;
}

message DeleteDashboardResponse {
  bool success = 1;
}

message SetDefaultDashboardRequest {
  string dashboard_id = 1;
}

message SetDefaultDashboardResponse {
  bool success = 1;
}