syntax = "proto3";

package shorts.v1alpha1;

option go_package = "github.com/castlemilk/shorted/services/gen/proto/go/shorts/v1alpha1;shortsv1alpha1";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "stocks/v1alpha1/stocks.proto";

service ShortedStocksService {
  // Shows top 10 short positions on the ASX over different periods of time.
  rpc Top10 (Top10Request) returns (Top10Response);
  // Provides an overview of a specific stock based on PRODUCT_CODE.
  rpc GetStock (StockSummaryRequest) returns (stocks.v1alpha1.Stock);
  // Provides a more in-depth breakdown of a particular stock's metadata.
  rpc GetStockDetails (StockDetailsRequest) returns (stocks.v1alpha1.StockDetails);
  // fetch time series data for a specific stock
  rpc GetStockData (GetStockDataRequest) returns (stocks.v1alpha1.TimeSeriesData);
}

// Request for Top10 RPC, specifying the period of time.
message Top10Request {
  enum Period {
    MONTH_1 = 0;
    MONTH_3 = 1;
    MONTH_6 = 2;
    YEAR_1 = 3;
  }
  Period period = 1;
}

// Response for Top10 RPC, including time series data for each of the top 10 short positions.
message Top10Response {
  repeated stocks.v1alpha1.TimeSeriesData time_series = 1;
}

// Request for GetStockSummary RPC, specifying the product code.
message StockSummaryRequest {
  string product_code = 1;
}

// Request for GetStockDetails RPC, specifying the product code.
message StockDetailsRequest {
  string product_code = 1;
}

// Request for GetStockDataRequest RPC, specifying the product code.
message GetStockDataRequest {
  string product_code = 1;
}