syntax = "proto3";

package stocks.v1alpha1;

option go_package = "github.com/castlemilk/shorted.com.au/services/gen/proto/go/stocks/v1alpha1;stocksv1alpha1";

import "google/protobuf/timestamp.proto";

// A Stock represents a single stock's metadata.
message Stock {
  string product_code = 1; // The stock code, e.g., "CBA", "ZIP", "PLS".
  string name = 2;         // The full name of the stock.
  float total_product_in_issue = 3;
  float reported_short_positions = 4;
  float percentage_shorted = 5;
  // TODO(castlemilk): add more metadata here as needed
  }
  
// TimeSeriesData represents time series data for a stock.
message TimeSeriesData {
  string product_code = 1;                        // The stock code.
  string name = 3;
  double latest_short_position = 4;                // The latest short position.
  repeated TimeSeriesPoint points = 10;            // The time series points.
  TimeSeriesPoint max = 11;                        // The maximum short position in the range
  TimeSeriesPoint min = 12;                        // The minimum short position in the range

}
  
// TimeSeriesPoint represents a single point in time for the time series data.
message TimeSeriesPoint {
  google.protobuf.Timestamp timestamp = 1;        // The point in time.
  double short_position = 2;                      // The short position at this point in time.
}

/**
Table "public.metadata"
      Column       | Type | Collation | Nullable | Default 
-------------------+------+-----------+----------+---------
 company_name      | text |           |          | 
 address           | text |           |          | 
 summary           | text |           |          | 
 details           | text |           |          | 
 website           | text |           |          | 
 stock_code        | text |           |          | 
 links             | text |           |          | 
 images            | text |           |          | 
 company_logo_link | text |           |          | 
 gcsUrl            | text |           |          | 
*/
message StockDetails {
  string product_code = 1;
  string company_name = 2;
  string industry = 3;
  string address = 4;
  string summary = 5;
  string details = 6;
  string website = 7;
  string gcs_url = 8;
}
